Alter section 1 size on mobiles to be the size of the viewport. Fixes #10

--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@
 
 /* General style settings for html elements */
   body {
-      position: relative; 
-      background-color: #f8f8f8; /* Styles the whole background with the same colour as the site's navbar */
+    position: relative; 
+    background-color: #f8f8f8; /* Styles the whole background with the same colour as the site's navbar */
   }
   h1 {
     font-family: 'Josefin Sans';
@@ -57,7 +57,7 @@
   
   @media (max-width: 767px) {
     h1 {
-      font-size: 2.75rem;
+      font-size: 3.25rem;
     }
   }
 
@@ -107,6 +107,7 @@
 
 /* General and common styling across all sections */
 #section1 {
+  height: 100%;
   color: #f2e4c3; 
   background-color: #242326;
   background-repeat: no-repeat;
@@ -148,6 +149,7 @@
 
 /* E.g. Desktops */
 /* TODO: Tinker with the dimensions */
+/* TODO: Look at flexbox to vertically align a div within another div **/
 @media (min-width: 1024px) and (min-height: 768px) {
     .navbar {
     height: 80px; /* 25px top and bottom plus 30 for the logo */ 
@@ -251,7 +253,7 @@
   /* TODO: Play around with positioning to get the background looking good!*/
   #section1 {
     padding-top:200px;
-    height:470px;
+    height:450px;
     background-image: url("images/section1.png");     
     background-position: 0px 80px; 
   }
@@ -278,6 +280,9 @@
 
 /* E.g. Mobile with landscape orientation */
 @media (min-width: 480px) and (max-width: 767px) {
+  h1 {
+    font-size: 2.75rem;
+  }
   .col-xs-12-landscape { /** Pushes extra padding around heading to avoid branding overlap **/
     padding-left: 100px;
     padding-right: 100px;
@@ -286,7 +291,6 @@
     width:50%;
     float:left;
   }
-
   .col-push-6 {
     left: 50%;
   }
@@ -321,20 +325,20 @@
 /* E.g. Mobile with portrait orientation */
 @media (max-width:479px) {
   #section1 {
-    padding-top:100px;
-    height:345px;
-    background-image: url("images/bg1m.png"); 
-    background-position: 0px -5px; 
+    padding-top:30vh;
+    height:100vh; /*E.g. 100% of the viewport height */
+    background-image: url("images/bg4m.png"); 
+    background-size: cover;
   }
   #section2 {
-    height:400px;
+    height:560px;
     background-image: none; 
     background-position: 100%; 
   }
   #section3 {
     padding-top:60px;
     height:500px;
-  } /* TODO: This section requires extra padding- work out why and fix properly */
+  } 
   #section5 {
     height:150px;
     background-image: url("images/bg5m.png");
